End of the website🎬🔚🔚

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -124,7 +124,8 @@ main article:focus {
             ASIDE
 ========================= */
 
-.sidenav {
+.sidenav,
+.sidenav2 {
   background: #1a1f16;
   max-width: 50em;
   width: 85%;
@@ -137,14 +138,18 @@ main article:focus {
   display: none;
 }
 
-.side-logo {
+.side-logo,
+.side-logo2 {
   text-align: center;
   margin: 2em 0;
 }
 
 .side-logo a:link,
 .side-logo a:visited,
-.side-logo a:active {
+.side-logo a:active,
+.side-logo2 a:link,
+.side-logo2 a:visited,
+.side-logo2 a:active {
   color: #c52233;
   text-decoration: none;
   font-weight: 700;
@@ -153,12 +158,18 @@ main article:focus {
 
 .menu-item:link,
 .menu-item:visited,
-.menu-item:active {
+.menu-item:active,
+.menu-item2:link,
+.menu-item2:visited,
+.menu-item2:active,
+#long-nav {
   color: #818181;
   text-decoration: none;
+  cursor: pointer;
 }
 
-.menu-list {
+.menu-list,
+.menu-list2 {
   display: flex;
   flex-direction: column;
   align-items: center;
